--- a/package.json
+++ b/package.json
@@ -4,9 +4,27 @@
   "description": "Code to be used to start the Quiz 10 exercise.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": ".\\node_modules\\.bin\\live-server index.html",
+    "lint": ".\\node_modules\\.bin\\eslint .",
+    "build": ".\\node_modules\\.bin\\tsc -b",
+    "test": "echo \"Error: no testE specified\" && exit 1"
   },
   "keywords": [],
   "author": "Prashant Pandey <prashant.pandey.dev@gmail.com> (http://prashant-pandey.github.io/)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "live-server": "^1.2.1",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
+  }
 }
